# blendr

./: Cargo.toml  LICENSE  README.md  build.rs  install.sh  names.ini  names_example.ini  release.sh  typos.toml
.github/workflows/: main.yml
src/: bluetooth.rs  cli_args.rs  error.rs  general_options.rs  main.rs  route.rs
src/bluetooth/: ble_default_services.rs
src/tui/: block.rs  connection_view.rs  error_popup.rs  mod.rs  peripheral_list.rs  peripheral_view.rs  search_input.rs  welcome.rs
src/tui/ui/: block.rs  list.rs  mod.rs  search_input.rs
