[package]
name = "blendr"
version = "0.12.0"
edition = "2021"
description = "The hacker's BLE (bluetooth low energy) browser terminal app"
license = "BSD-3-Clause"
authors = ["Dmitriy Kovalenko <dmtr.kovalenko@outlook.com>"]

[[bin]]
name = "blendr"
path = "src/main.rs"
doc = false

[dependencies]
ansi-to-tui = "3.0.0"
btleplug = "0.10.5"
byteorder = "1.4.3"
chrono = "0.4.26"
clap = { version = "4.3.4", features = ["derive"] }
copypasta = "0.8.2"
crossterm = "0.26.1"
futures = "0.3.28"
hexyl = "0.13.0"
lazy_static = "1.4.0"
regex = "1.8.4"
tokio = { version = "1.28", features = ["full", "tracing"] }
tracing = "0.1.37"
tracing-appender = "0.2.2"
tui = { package = "ratatui", version = "0.21.0", features = ["all-widgets"] }
uuid = "1.3.4"

[build-dependencies]
clap_mangen = "0.2.12"
clap = { version = "4.3.4", features = ["derive"] }
uuid = "1.3.4"

[target.'cfg(target_os = "linux")'.dependencies]
dbus = { version = "0.9.7", features = ["vendored"] }
